nuevos endpoints: delete, search by text
